# opengl_learn

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/1_HelloOpenGL/: hello_square.cpp  hello_square.h  hello_triangle.cpp  hello_triangle.h  hello_window.cpp  hello_window.h
src/1_HelloOpenGL/practice/: 1_two_triangle.cpp  1_two_triangle.h  2_two_VAO_two_VBO.cpp  2_two_VAO_two_VBO.h  3_two_triangle_with_two_shader.cpp  3_two_triangle_with_two_shader.h
src/2_GLSL/: color_in_vertices.cpp  color_in_vertices.h  use_uniform.cpp  use_uniform.h
src/2_GLSL/practice/: final_practice.cpp  final_practice.h  reverse_triangle.cpp  reverse_triangle.h  use_uniform_move.cpp  use_uniform_move.h
src/3_Textures/: HelloTexture.cpp  HelloTexture.h  texture_fs.glsl  texture_vs.glsl
src/3_Textures/reverse_face/: reverse_face_fs.glsl
src/3_Textures/texture_coord/: TextureCoord.cpp  TextureCoord.h
src/3_Textures/texture_wrap/: TextureWrap.cpp  TextureWrap.h  wrap_fs.glsl
src/3_Textures/uniform_mix/: mix.cpp  mix.h
src/4_transform/: HelloTransform.cpp  HelloTransform.h
